--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#">Главная</a></li>
+                    <li><a href="index.html">Главная</a></li>
                     <li><a href="#">Каталог</a></li>
                     <li><a href="#">Доставка и оплата</a></li>
                     <li><a href="#">Прайс-лист</a></li>
                     <li><a href="#">Контакты</a></li>
+                    <li><a href="auth.html">Вход в аккаунт</a></li>
+                    <li><a href="reg.html">Регистрация</a></li>
                 </ul>
             </nav>
         </header>
